# autora

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  AER_GUI.py  AER_config.py  AER_utils.py  Brewfile  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.md  MAINTAINING.md  README.md  Tutorial.ipynb  aer_gui.py  aer_utils.py  analyze_control_study.py  analyze_exp_learning_study.py  analyze_lca_study.py  analyze_stroop_study.py  analyze_weber_study.py  analyze_weber_study_org.py  debug_theorist.py  debug_theorist_relu.py  index.html  index.md  main.py  mcmc.py  meta.yaml  mkdocs.yml  objects.inv  package_for_conda.sh  parallel.py  publish-on-anaconda-org.sh  pyproject.toml  requirements.txt  run_color_naming_study.py  run_control_fair_study_slurm.py  run_control_original_study.slurm  (+31 more)
.github/: dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.github/workflows/: check-conda-packaging.yml  draft-pdf.yml  (+24 more)
AER_experiment_environment/: IV.py  IV_current.py  client_server_interface.py  data_upload_client.py  experiment.py  experiment_GUI.py  experiment_client.py  experiment_config.py  experiment_plot_GUI.py  experiment_server.py  experiment_server_GUI.py  experiment_table_GUI.py  experimentalist_GUI.py  file_upload_server_protocol.py  run_experiment_GUI.py  variable_labels.py
AER_experimentalist/: DV.py  DV_current.py  DV_time.py  DV_voltage.py  IV.py  IV_current.py  IV_time.py  IV_trial.py  IV_voltage.py  OLED_output.py  V_time.py  experiment.py  experiment_GUI.py  experiment_config.py  experiment_design.py  experiment_design_synthetic_weber.py  experiment_plot_GUI.py  experiment_server.py  experiment_server_protocol.py  experiment_table_GUI.py  experiment_toplevel_GUI.py  experiment_upload_client.py  experimentalist.py  experimentalist_config.py  experimentalist_popper.py  experimentalist_popper_config.py  experimentalist_random_sampling.py  experimentalist_uncertainty_sampling.py  file_upload_client.py  file_upload_server.py  run_experiment_server_GUI.py  test.py  utils.py  variable.py  variable_labels.py
AER_theorist/: architect.py  object_of_study.py  plot_utils.py  theorist.py  theorist_GUI.py  theorist_darts.py  theorist_random_darts.py
Prior/: check_prior.py  fit_prior.py
Process-Formulas/: show_l2s_results.py  utils.py
Test/: test1.py  test2.py  test4.py
Validation/: Tutorial.ipynb  data_analysis.py  get_top_models.py  iodata.py  model_averaging.py  model_charac.py  model_predict.py  postsa.py  sample_charac.py  sample_charac_parallel.py
aer/: __init__.py  config.py  experimental_data.py  gui.py  object_of_study.py  utils.py  variable.py
aer_bms/: __init__.py  fit_prior.py  main.py  mcmc.py  parallel.py  prior.py  utils.py
aer_experimentalist/: experiment_design_synthetic_weber.py  experimentalist.py  experimentalist_config.py  experimentalist_popper.py
aer_theorist/: object_of_study.py  theorist.py  theorist_GUI.py  theorist_darts.py  theorist_random_darts.py
autora/: __init__.py  gui.py  meta.yaml
autora_bms/: fit_prior.py  mcmc.py  parallel.py  prior.py  utils.py
autora_bsr/: __init__.py  bsr_class.py  demo.py  funcs.py  funcs_new.py  node.py  prior.py
cheat-sheet/: index.html
conda/: README.md  meta.yaml  package.sh  publish-on-anaconda-org.sh
contribute/: index.html
docs/: CODEOWNERS  bsr.ipynb  cheat-sheet.md  cheat_sheet.md  docstrings.py  example.ipynb  example.md  example_docstrings.py  gen_ref_pages.py  how_it_works.md  index.md  installation.md  introduction.md  meta_parameters.md  search_space.md  terminology.md  weber.ipynb
example/: experiment_0_data.csv  test_weber_bms_sklearn.py  weber_bms.ipynb  weber_bms_sklearn.py
examples/: analyze_control_study.py  analyze_exp_learning_study.py  analyze_lca_study.py  analyze_stroop_study.py  analyze_weber_study.py  analyze_weber_study_org.py  debug_theorist.py  debug_theorist_relu.py  index.html  parse_model.py  run_color_naming_study.py  run_control_fair_study.slurm  run_control_original_study_slurm.py  run_control_random_study_slurm.py  run_exp_learning_fair_study_slurm.py  run_exp_learning_original_study_slurm.py  run_exp_learning_random_study_slurm.py  run_exp_learning_study.py  run_experiment_GUI.py  run_experiment_server_GUI.py  run_lca_random_study_slurm.py  run_lca_study.py  run_stroop_study.py  run_stroop_study_org.py  run_stroop_study_slurm.py  run_tinkerforge_study.py  run_weber_original_study_slurm.py  run_weber_random_study_slurm.py  run_weber_study.py  run_weber_study_slurm.py
experiment-runner/: index.html  index.md
experimentalist/: index.html  index.md
installation/: index.html  installation.md
mkdocs/: _gen_ref_pages.py  base.yml  generate_code_reference.py  hooks.py
online-experiments/: index.html
paper/: paper.bib  paper.md
recruiter/: .env  prolific_recruiter.py  study_options.py
search/: search_index.json
src/: .keep
terminology/: index.html
test/: main.py  test_mcmc.py  test_weber_bms_sklearn.py  weber_bms.py
tests/: README.md  psy-test.py  state_machine.ipynb  test_autora.py  test_bms_1d_primitive_recovery.py  test_bms_2d_primitive_recovery.py  test_bms_custom_primitives.py  test_bms_enforce_root.py  test_bms_mcmc.py  test_bms_multi_model_output.py  test_bsr_1d_recovery.py  test_bsr_2d_recovery.py  test_bsr_mcmc_actions.py  test_bsr_node_and_operator.py  test_bsr_tree_operation.py  test_closed_loop.py  test_controller_plots.py  test_core_imports.py  test_cycle.py  test_cycle_data_serialization.py  test_cycle_plots.py  test_darts_1d_primitive_recovery.py  test_darts_1d_primitive_recovery2.py  test_darts_2d_primitive_recovery.py  test_darts_classifier.py  test_dissimilarity_sampler.py  test_experimental_data.py  test_experimentalist.py  test_experimentalist_assumption.py  test_experimentalist_pipeline.py  test_experimentalist_random.py  test_experimentalist_uncertainty.py  test_fasification_sampler.py  test_mcmc.py  test_mcmc_actions.py  test_model_disagreement_sampler.py  test_model_inventory.py  test_node_and_operator.py  test_pipeline.py  test_poppernet_pooler.py  (+13 more)
theorist/: index.html
tutorials/: index.html
(+1563 files in other folders)
