[project]
name = "autora"
description = "Autonomous Research Assistant (AutoRA) is a framework for automating steps of the empirical research process."
authors = [
  { name = "Sebastian Musslick", email = "sebastian_musslick@brown.edu" },
  { name = "John Gerrard Holland", email = "john_holland1@brown.edu" },
]
readme = "docs/index.md"
license = { file = "LICENSE.md" }
dynamic = ["version"]

dependencies = [
  "autora-core",
  "autora-workflow",
]

[project.optional-dependencies]
dev = [
  "autora-core[dev]",
]

all = [
  "autora[all-theorists]",
  "autora[all-experimentalists]",
  "autora[all-experiment-runners]",
  "autora[synthetic-data]",
]

all-theorists = [
  "autora[theorist-darts]",
  "autora[theorist-bms]",
  "autora[theorist-bsr]",
]
theorist-darts = [
  "autora-theorist-darts",
]
theorist-bms = [
  "autora-theorist-bms",
]
theorist-bsr = [
  "autora-theorist-bsr",
]

all-experimentalists = [
  "autora[experimentalist-sampler-inequality]",
  "autora[experimentalist-sampler-novelty]",
  "autora[experimentalist-sampler-nearest-value]",
  "autora[experimentalist-sampler-model-disagreement]",
  "autora[experimentalist-sampler-uncertainty]",
  "autora[experimentalist-falsification]",
]
experimentalist-sampler-inequality =[
  "autora-experimentalist-sampler-inequality"
]
experimentalist-sampler-novelty =[
  "autora-experimentalist-sampler-novelty"
]
experimentalist-sampler-nearest-value =[
  "autora-experimentalist-sampler-nearest-value"
]
experimentalist-sampler-model-disagreement =[
  "autora-experimentalist-sampler-model-disagreement"
]
experimentalist-sampler-uncertainty =[
  "autora-experimentalist-sampler-uncertainty"
]
experimentalist-falsification =[
  "autora-experimentalist-falsification"
]

all-experiment-runners = [
  "autora[experiment-runner-firebase-prolific]"
]
experiment-runner-firebase-prolific = [
  "autora-experiment-runner-firebase-prolific"
]
all-experiment-runner-experimentation-managers = [
  "autora[experiment-runner-experimentation-manager-firebase]"
]
experiment-runner-experimentation-manager-firebase = [
  "autora-experiment-runner-experimentation-manager-firebase"
]
all-experiment-runner-recruitment-managers=[
  "autora[experiment-runner-recruitment-manager-prolific]"
]
experiment-runner-recruitment-manager-prolific = [
  "autora-experiment-runner-recruitment-manager-prolific"
]

synthetic-data = [
  "autora-synthetic"
]

docs = [
  "autora-core[docs]",
]

test = [
  "pytest"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai/"
repository = "https://github.com/AutoResearch/autora"
documentation = "https://autoresearch.github.io/autora/"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
