[project]
name = "autora"
description = "Autonomous Research Assistant (AutoRA) is a framework for automating steps of the empirical research process."
authors = [
  { name = "Sebastian Musslick", email = "sebastian@musslick.de" }
]
maintainers = [
  { name = "Ben Andrew", email = "benwallaceandrew@gmail.com" },
  { name = "George Dang", email = "george_dang@brown.edu" },
  { name = "John Gerrard Holland", email = "john_holland1@brown.edu" },
  { name = "Younes Strittmatter", email = "younes_strittmatter@brown.edu" },
]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

dependencies = [
  "autora-core",
  "autora-workflow",
  "autora-synthetic",
]

[project.optional-dependencies]
dev = [
  "autora-core[dev]",
]

all = [
  "autora[all-theorists]",
  "autora[all-experimentalists]",
  "autora[all-experiment-runners]",
]

all-theorists = [
  "autora[theorist-darts]",
  "autora[theorist-bms]",
  "autora[theorist-bsr]",
]
theorist-darts = [
  "autora-theorist-darts",
]
theorist-bms = [
  "autora-theorist-bms",
]
theorist-bsr = [
  "autora-theorist-bsr",
]

all-experimentalists = [
  "autora[experimentalist-sampler-inequality]",
  "autora[experimentalist-sampler-novelty]",
  "autora[experimentalist-sampler-nearest-value]",
  "autora[experimentalist-sampler-model-disagreement]",
  "autora[experimentalist-sampler-uncertainty]",
  "autora[experimentalist-sampler-leverage]",
  "autora[experimentalist-falsification]",
  "autora[experimentalist-sampler-mixture]",
]
experimentalist-sampler-inequality =[
  "autora-experimentalist-sampler-inequality"
]
experimentalist-sampler-novelty =[
  "autora-experimentalist-sampler-novelty"
]
experimentalist-sampler-nearest-value =[
  "autora-experimentalist-sampler-nearest-value"
]
experimentalist-sampler-model-disagreement =[
  "autora-experimentalist-sampler-model-disagreement"
]
experimentalist-sampler-uncertainty =[
  "autora-experimentalist-sampler-uncertainty"
]
experimentalist-sampler-leverage =[
  "autora-experimentalist-sampler-leverage"
]
experimentalist-falsification =[
  "autora-experimentalist-falsification"
]
experimentalist-sampler-mixture =[
  "mixture-experimentalist==1.0.0a4"
]

all-experiment-runners = [
  "autora[experiment-runner-firebase-prolific]"
]
experiment-runner-firebase-prolific = [
  "autora-experiment-runner-firebase-prolific"
]
all-experiment-runner-experimentation-managers = [
  "autora[experiment-runner-experimentation-manager-firebase]"
]
experiment-runner-experimentation-manager-firebase = [
  "autora-experiment-runner-experimentation-manager-firebase"
]
all-experiment-runner-recruitment-managers=[
  "autora[experiment-runner-recruitment-manager-prolific]"
]
experiment-runner-recruitment-manager-prolific = [
  "autora-experiment-runner-recruitment-manager-prolific"
]

docs = [
  "autora-core[docs]",
]

test = [
  "pytest"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai/"
repository = "https://github.com/AutoResearch/autora"
documentation = "https://autoresearch.github.io/autora/"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
packages = []
