[project]
name = "autora"
description = "Autonomous Research Assistant (AutoRA) is a framework for automating steps of the empirical research process."
authors = [
  { name = "Sebastian Musslick", email = "sebastian@musslick.de" }
]
maintainers = [
  { name = "Ben Andrew", email = "benwallaceandrew@gmail.com" },
  { name = "George Dang", email = "george_dang@brown.edu" },
  { name = "John Gerrard Holland", email = "john_holland1@brown.edu" },
  { name = "Younes Strittmatter", email = "younes_strittmatter@brown.edu" },
]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

dependencies = [
  "autora-core",
  "autora-synthetic",
]

[project.optional-dependencies]
dev = [
  "autora-core[dev]",
]

all = [
  "autora[all-theorists]",
  "autora[all-experimentalists]",
  "autora[all-experiment-runners]",
]

all-theorists = [
  "autora[theorist-darts]",
  "autora[theorist-bms]",
  "autora[theorist-bsr]",
]
theorist-darts = [
  "autora-theorist-darts",
]
theorist-bms = [
  "autora-theorist-bms",
]
theorist-bsr = [
  "autora-theorist-bsr",
]

all-experimentalists = [
  "autora[experimentalist-inequality]",
  "autora[experimentalist-novelty]",
  "autora[experimentalist-nearest-value]",
  "autora[experimentalist-model-disagreement]",
  "autora[experimentalist-uncertainty]",
  "autora[experimentalist-leverage]",
  "autora[experimentalist-falsification]",
  "autora[experimentalist-mixture]",
  "autora[experimentalist-prediction-filter]",
  "autora[experimentalist-bandit-random]"
]
experimentalist-inequality = [
  "autora-experimentalist-inequality"
]
experimentalist-novelty = [
  "autora-experimentalist-novelty"
]
experimentalist-nearest-value = [
  "autora-experimentalist-nearest-value"
]
experimentalist-model-disagreement = [
  "autora-experimentalist-model-disagreement"
]
experimentalist-uncertainty = [
  "autora-experimentalist-uncertainty"
]
experimentalist-leverage = [
  "autora-experimentalist-leverage"
]
experimentalist-falsification = [
  "autora-experimentalist-falsification"
]
experimentalist-mixture = [
  "mixture-experimentalist==1.0.0a7"
]
experimentalist-prediction-filter = [
  "autora-experimentalist-prediction-filter"
]
experimentalist-bandit-random = [
  "autora-experimentalist-bandit-random"
]




all-experiment-runners = [
  "autora[experiment-runner-firebase-prolific]",
  "autora[all-experiment-runners-synthetic]"
]

all-experiment-runners-synthetic = [
  "autora[experiment-runner-synthetic-abstract-equation]"
]
experiment-runner-synthetic-abstract-equation = [
  "autora-synthetic-abstract-equation"
]

experiment-runner-firebase-prolific = [
  "autora-experiment-runner-firebase-prolific"
]
all-experiment-runner-experimentation-managers = [
  "autora[experiment-runner-experimentation-manager-firebase]"
]
experiment-runner-experimentation-manager-firebase = [
  "autora-experiment-runner-experimentation-manager-firebase"
]
all-experiment-runner-recruitment-managers = [
  "autora[experiment-runner-recruitment-manager-prolific]"
]
experiment-runner-recruitment-manager-prolific = [
  "autora-experiment-runner-recruitment-manager-prolific"
]

docs = [
  "autora-core[docs]",
]

test = [
  "pytest"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai/"
repository = "https://github.com/AutoResearch/autora"
documentation = "https://autoresearch.github.io/autora/"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
packages = []
